:sparkles: :feat  Modification users possible

--- a/Front/src/components/Forms/Login.module.scss
+++ b/Front/src/components/Forms/Login.module.scss
@@ -35,6 +35,9 @@
         background-color: var(--primary);
         padding-block: 2%;
         border-radius: 10vh;
+        padding-left: 3%;
+        font-size: 1rem;
+        font-style: italic;
 
 
 
@@ -46,7 +49,7 @@
         margin: 0 auto;
     }
 
-    .labelLogin {
+    .remember {
         width: 50%;
         margin: 0 auto;
     }
