--- a/Front/src/components/Forms/Register.module.scss
+++ b/Front/src/components/Forms/Register.module.scss
@@ -34,6 +34,9 @@
         background-color: var(--primary);
         padding-block: 2%;
         border-radius: 10vh;
+        padding-left: 3%;
+        font-size: 1rem;
+        font-style: italic;
 
 
 
