--- a/Front/src/pages/Profile/Profile.module.scss
+++ b/Front/src/pages/Profile/Profile.module.scss
@@ -3,19 +3,23 @@
     margin: 0 auto;
     margin-block: 3%;
     background-color: var(--blue);
-    padding: 4%;
+    padding: 3%;
     border-radius: 10vh 0 10vh 0;
     border: solid var(--red) 2px;
     box-shadow: var(--box-shadow);
+    transition: ease-in-out all .3s;
 
     .container {
         display: flex;
         justify-content: space-between;
+        width: 100%;
 
         .content {
             display: flex;
             flex-direction: column;
-            width: 48%;
+            width: 45%;
+            align-items: center;
+            padding: 0;
 
             label {
                 font-size: 1.5rem;
@@ -32,6 +36,7 @@
                 background-color: var(--primary);
                 padding-block: 2%;
                 border-radius: 10vh;
+                width: 100%;
             }
         }
 
@@ -40,6 +45,14 @@
             background-color: var(--primary);
             width: 15vh;
             height: 15vh;
+            display: flex;
+            margin: 0;
+            padding: 0;
+            border: var(--red) 2px solid;
+            width: 100%;
+            height: 100%;
+
+
         }
     }
 
@@ -65,7 +78,8 @@
         color: grey;
     }
 
-    .button {
+    .button,
+    .button2 {
 
         display: flex;
         text-transform: uppercase;
@@ -79,7 +93,7 @@
         transition: all .3s;
         z-index: 0;
         margin: 0 auto;
-        margin-top: 15%;
+        margin-top: 5%;
         cursor: pointer;
 
         &:before {
@@ -105,6 +119,15 @@
         }
     }
 
+    .button2 {
+        font-size: 0.8rem;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+
+    }
+
     .feedback {
         color: var(--red);
         text-align: center;
@@ -128,4 +151,94 @@
             color: var(--red);
         }
     }
+
+    .password {
+        transition: all ease-in-out .3s;
+    }
+
+    ;
 }
+
+.containerInput {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+
+    .inputFile {
+        width: 100%;
+        font-size: 1rem;
+        border: black inset 2px;
+    }
+
+    input[type=file]::file-selector-button {
+        text-transform: uppercase;
+        background-color: var(--action);
+        border-radius: 10vh 0 10vh 0;
+        font-weight: 800;
+        padding: 0.2em 1em;
+        font-size: 0.7rem;
+        overflow: hidden;
+        position: relative;
+        transition: all .3s;
+        z-index: 0;
+        margin-right: 5%;
+        cursor: pointer;
+
+        &:hover {
+            color: var(--primary);
+            transform: scale(1.05);
+            background-color: var(--red);
+
+        }
+    }
+
+}
+
+
+// input[type=file] {
+//     left: 0;
+//     top: 0;
+//     opacity: 0;
+//     position: absolute;
+//     font-size: 90px;
+// }
+
+// .btn {
+//     display: flex;
+//     text-transform: uppercase;
+//     background-color: var(--action);
+//     border-radius: 10vh 0 10vh 0;
+//     font-weight: 800;
+//     padding: 0.8em 1.5em;
+//     font-size: 0.7rem;
+//     overflow: hidden;
+//     position: relative;
+//     transition: all .3s;
+//     z-index: 0;
+//     margin: 0 auto;
+//     margin-top: 5%;
+//     cursor: pointer;
+
+//     &:before {
+//         content: '';
+//         position: absolute;
+//         bottom: 0;
+//         left: 0;
+//         width: 0%;
+//         height: 100%;
+//         background-color: var(--red);
+//         transition: ease-in-out .3s;
+//         border-radius: 10vh 0 10vh 0;
+//         z-index: -1;
+//     }
+
+//     &:hover {
+//         color: var(--primary);
+//         transform: scale(1.1);
+
+//         &:before {
+//             width: 100%;
+//         }
+//     }
+// }
