--- a/Front/src/components/Header/Account.module.scss
+++ b/Front/src/components/Header/Account.module.scss
@@ -86,6 +86,16 @@
         }
     }
 
+    .image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 75%;
+        border-radius: 50%;
+        margin-right: 20%;
+
+    }
+
     .profile {
         position: absolute;
         bottom: -165%;
