:memo: new comments for Header & restructuration of folders and files

--- a/Front/src/components/Footer/components/Contact.module.scss
+++ b/Front/src/components/Footer/components/Contact.module.scss
@@ -1,4 +1,4 @@
-@use"../../assets/styles/mixin" as mixin;
+@use"../../../assets/styles/mixin" as mixin;
 
 .contact {
     @include mixin.smallest {
