--- a/Front/src/components/Forms/Register.module.scss
+++ b/Front/src/components/Forms/Register.module.scss
@@ -139,11 +139,16 @@
         font-size: 1.2rem;
     }
 
-    .feedback {
-        color: var(--red);
+    .feedbackGood {
+        color: var(--text-color);
         text-align: center;
         margin-bottom: 2%;
         font-size: 1.2rem;
+        font-weight: 500;
+        background-color: var(--action);
+        border-radius: 10vh 0 10vh 0;
+        border: inset 2px var(--red);
+        margin-top: 10px;
     }
 
     .not {
