:building_construction: changement de structures sur log // Provider +JWT fonctionnels

--- a/Front/src/assets/styles/_theme.scss
+++ b/Front/src/assets/styles/_theme.scss
@@ -36,3 +36,24 @@
     }
   }
 }
+
+.active {
+  border-bottom: 2px solid var(--red)
+}
+
+input {
+  padding-block: 2%;
+  border-radius: 10vh;
+  padding-left: 3%;
+  font-size: 1rem;
+  font-style: italic;
+
+
+
+}
+
+label {
+  font-size: 1.2rem;
+  width: 100%;
+  margin: 0 auto;
+}
