--- a/Front/src/components/Header/Header.module.scss
+++ b/Front/src/components/Header/Header.module.scss
@@ -54,46 +54,50 @@
 
     }
 
-    img {
-        width: 10%;
+    .a {
         padding: 1% 0;
         position: relative;
         left: 50%;
-        transform: translateX(-50%);
+        width: 10%;
 
-        @include mixin.md-lt {
-            width: 15%;
+        img {
+            width: 80%;
+            transform: translateX(-50%);
+
+            @include mixin.md-lt {
+                width: 95%;
+            }
+
+            @include mixin.sm-lt {
+                width: 100%;
+            }
+
+            @include mixin.xs {
+                width: 100%;
+            }
+
+            @include mixin.xxs {
+                width: 100%;
+            }
+
+            @include mixin.xxxs {
+                width: 150%;
+            }
+
+            @include mixin.intxs {
+                width: 150%;
+            }
+
+            @include mixin.smallest {
+                width: 150%;
+            }
+
+
         }
-
-        @include mixin.sm-lt {
-            width: 15%;
-        }
-
-        @include mixin.xs {
-            width: 20%;
-        }
-
-        @include mixin.xxs {
-            width: 25%;
-        }
-
-        @include mixin.xxxs {
-            width: 28%;
-        }
-
-        @include mixin.intxs {
-            width: 28%;
-        }
-
-        @include mixin.smallest {
-            width: 28%;
-        }
-
-
     }
 
     i {
-        font-size: 30px;
+        font-size: 3rem;
     }
 
     .icon {
