--- a/Front/src/components/Header/Account.module.scss
+++ b/Front/src/components/Header/Account.module.scss
@@ -16,7 +16,11 @@
     width: 4.8em;
     transition: .5s all;
     cursor: pointer;
-    border: red;
+
+    a {
+        color: var(--red)
+    }
+
 
 
 
@@ -92,7 +96,6 @@
         justify-content: center;
         width: 75%;
         border-radius: 50%;
-        margin-right: 20%;
 
     }
 
