--- a/Front/src/pages/LoginView/LoginView.module.scss
+++ b/Front/src/pages/LoginView/LoginView.module.scss
@@ -20,6 +20,7 @@
             color: var(--red);
             font-weight: 600;
             margin-top: 25px;
+            font-size: 1.2rem;
         }
 
     }
