:hammer: schema yup WIP

--- a/Front/src/components/Header/Account.module.scss
+++ b/Front/src/components/Header/Account.module.scss
@@ -96,6 +96,8 @@
         justify-content: center;
         width: 75%;
         border-radius: 50%;
+        height: 4em;
+        width: 4em;
 
     }
 
