--- a/Front/src/pages/Admin/Admin.module.scss
+++ b/Front/src/pages/Admin/Admin.module.scss
@@ -27,3 +27,12 @@
 
     }
 }
+
+.feedbackGood {
+    text-align: center;
+    margin-block: 15px;
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #000;
+
+}
