--- a/Front/src/assets/styles/_theme.scss
+++ b/Front/src/assets/styles/_theme.scss
@@ -57,3 +57,9 @@ label {
   width: 100%;
   margin: 0 auto;
 }
+
+.form-error {
+  color: var(--red);
+  font-weight: 500;
+  text-align: center;
+}
