--- a/Front/src/pages/Profile/Profile.module.scss
+++ b/Front/src/pages/Profile/Profile.module.scss
@@ -11,7 +11,7 @@
 
     .container {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
         .content {
@@ -39,17 +39,24 @@
             }
         }
 
-        .picture {
+        .contentImg {
+            width: 18vh;
+            height: 18vh;
             border-radius: 100%;
-            background-color: var(--primary);
-            width: 15vh;
-            height: 15vh;
-            display: flex;
-            margin: 0;
-            padding: 0;
-            border: var(--red) 2px solid;
-            width: 100%;
-            height: 100%;
+
+
+            .picture {
+                border-radius: 100%;
+                background-color: var(--primary);
+                display: flex;
+                margin: 0;
+                padding: 0;
+                border: var(--red) 2px solid;
+                width: 100%;
+                height: 100%;
+
+            }
+
 
 
         }
