--- a/Front/src/assets/styles/_theme.scss
+++ b/Front/src/assets/styles/_theme.scss
@@ -63,3 +63,16 @@ label {
   font-weight: 500;
   text-align: center;
 }
+
+.feedbackGood {
+  text-transform: uppercase;
+  background-color: var(--action);
+  border-radius: 10vh 0 10vh 0;
+  font-weight: 800;
+  padding: 7px 18px;
+  font-size: 1rem;
+  text-align: center;
+  width: 66%;
+  margin: 15px auto;
+  border: 2px solid var(--red)
+}
