--- a/Front/src/pages/Profile/Profile.module.scss
+++ b/Front/src/pages/Profile/Profile.module.scss
@@ -1,151 +1,155 @@
-.form {
-    width: 30%;
+.profile {
+    width: 40%;
     margin: 0 auto;
     margin-block: 3%;
     background-color: var(--blue);
-    padding: 3%;
     border-radius: 10vh 0 10vh 0;
     border: solid var(--red) 2px;
     box-shadow: var(--box-shadow);
     transition: ease-in-out all .3s;
 
-    .container {
-        display: flex;
-        justify-content: space-around;
+    form {
         width: 100%;
+        padding: 5%;
 
-        .content {
+        .container {
             display: flex;
-            flex-direction: column;
-            width: 45%;
-            align-items: center;
-            padding: 0;
+            justify-content: space-around;
+            width: 100%;
 
-            label {
-                font-size: 1.5rem;
-            }
-
-            input:-webkit-autofill,
-            input:-webkit-autofill:hover,
-            input:-webkit-autofill:focus,
-            input:-webkit-autofill:active {
-                -webkit-box-shadow: 0 0 0px 1000px var(--primary) inset;
-            }
-
-            input {
-                padding-block: 2%;
-                border-radius: 10vh;
-                width: 100%;
-            }
-        }
-
-        .contentImg {
-            width: 18vh;
-            height: 18vh;
-            border-radius: 100%;
-
-
-            .picture {
-                border-radius: 100%;
-                background-color: var(--primary);
+            .content {
                 display: flex;
-                margin: 0;
+                flex-direction: column;
+                width: 45%;
+                align-items: center;
                 padding: 0;
-                border: var(--red) 2px solid;
-                width: 100%;
-                height: 100%;
 
+                label {
+                    font-size: 1.5rem;
+                }
+
+                input:-webkit-autofill,
+                input:-webkit-autofill:hover,
+                input:-webkit-autofill:focus,
+                input:-webkit-autofill:active {
+                    -webkit-box-shadow: 0 0 0px 1000px var(--primary) inset;
+                }
+
+                input {
+                    padding-block: 2%;
+                    border-radius: 10vh;
+                    width: 100%;
+                }
             }
 
+            .contentImg {
+                width: 18vh;
+                height: 18vh;
+                border-radius: 100%;
 
 
+                .picture {
+                    border-radius: 100%;
+                    background-color: var(--primary);
+                    display: flex;
+                    margin: 0;
+                    padding: 0;
+                    border: var(--red) 2px solid;
+                    width: 100%;
+                    height: 100%;
+
+                }
+
+
+
+            }
         }
-    }
 
 
-    label {
-        font-size: 1.5rem;
-    }
+        label {
+            font-size: 1.5rem;
+        }
 
-    input:-webkit-autofill,
-    input:-webkit-autofill:hover,
-    input:-webkit-autofill:focus,
-    input:-webkit-autofill:active {
-        -webkit-box-shadow: 0 0 0px 1000px #fff inset;
-    }
+        input:-webkit-autofill,
+        input:-webkit-autofill:hover,
+        input:-webkit-autofill:focus,
+        input:-webkit-autofill:active {
+            -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+        }
 
-    input {
+        input {
 
-        padding-block: 1%;
-        padding-left: 2%;
-        border-radius: 10vh;
-        font-size: 1.3rem;
-        font-style: italic;
-        color: #000;
-    }
+            padding-block: 1%;
+            padding-left: 2%;
+            border-radius: 10vh;
+            font-size: 1.3rem;
+            font-style: italic;
+            color: #000;
+        }
 
-    .feedback {
-        color: var(--red);
-        text-align: center;
-        margin-top: 3%;
-        font-size: 1.3rem;
-    }
-
-    .feedbackGood {
-        color: green;
-        text-align: center;
-        margin-top: 3%;
-        font-size: 1.3rem;
-    }
-
-    p {
-        text-align: center;
-        cursor: pointer;
-        transition: all .3s;
-
-        &:hover {
+        .feedback {
             color: var(--red);
+            text-align: center;
+            margin-top: 3%;
+            font-size: 1.3rem;
         }
+
+        .feedbackGood {
+            color: green;
+            text-align: center;
+            margin-top: 3%;
+            font-size: 1.3rem;
+        }
+
+        p {
+            text-align: center;
+            cursor: pointer;
+            transition: all .3s;
+
+            &:hover {
+                color: var(--red);
+            }
+        }
+
+        .password {
+            transition: all ease-in-out .3s;
+        }
+
+        ;
     }
 
-    .password {
-        transition: all ease-in-out .3s;
-    }
-
-    ;
-}
-
-.containerInput {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-
-    .inputFile {
-        width: 100%;
-        font-size: 1rem;
-        border: black inset 2px;
-    }
-
-    input[type=file]::file-selector-button {
-        text-transform: uppercase;
-        background-color: var(--action);
-        border-radius: 10vh 0 10vh 0;
-        font-weight: 800;
-        padding: 0.2em 1em;
-        font-size: 0.7rem;
-        overflow: hidden;
+    .containerInput {
+        display: inline-block;
         position: relative;
-        transition: all .3s;
-        z-index: 0;
-        margin-right: 5%;
-        cursor: pointer;
+        overflow: hidden;
+        width: 100%;
 
-        &:hover {
-            color: var(--primary);
-            transform: scale(1.05);
-            background-color: var(--red);
+        .inputFile {
+            width: 100%;
+            font-size: 1rem;
+            border: black inset 2px;
+        }
 
+        input[type=file]::file-selector-button {
+            text-transform: uppercase;
+            background-color: var(--action);
+            border-radius: 10vh 0 10vh 0;
+            font-weight: 800;
+            padding: 0.2em 1em;
+            font-size: 0.7rem;
+            overflow: hidden;
+            position: relative;
+            transition: all .3s;
+            z-index: 0;
+            margin-right: 5%;
+            cursor: pointer;
+
+            &:hover {
+                color: var(--primary);
+                transform: scale(1.05);
+                background-color: var(--red);
+
+            }
         }
     }
 
