--- a/Front/src/assets/styles/_utils.scss
+++ b/Front/src/assets/styles/_utils.scss
@@ -88,6 +88,11 @@
   margin-bottom: 30px;
 }
 
+.mx20 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 a {
   text-decoration: none;
   color: var(--text-color);
