--- a/Front/src/assets/styles/_theme.scss
+++ b/Front/src/assets/styles/_theme.scss
@@ -62,6 +62,7 @@ label {
   color: var(--red);
   font-weight: 500;
   text-align: center;
+  font-size: clamp(1rem, 1.2rem, 1.5rem);
 }
 
 .feedbackGood {
@@ -87,18 +88,37 @@ label {
   width: 50%;
   margin: 5% auto;
 
-  h3 {
+  .h3 {
     text-align: center;
+  }
+
+  .labelAdmin {
+    width: 90%;
+    margin: 20px auto 0 auto;
+
   }
 
   .inputAdmin {
     padding: 10px;
+    width: 90%;
+    margin: 0 auto;
   }
 
   select {
     padding: 5px;
     border-radius: 10vh;
     margin-bottom: 20px;
+  }
+
+  textarea {
+    box-sizing: border-box;
+    width: 90%;
+    margin: 0 auto;
+    height: 20vh;
+    border-radius: 30px;
+    font-size: 20px;
+    font-family: var(--font-family);
+    padding: 10px
   }
 
 }
@@ -110,4 +130,11 @@ label {
 .fw200 {
   font-weight: 200;
   font-style: italic;
+}
+
+.feedbackGoodLight {
+  text-align: center;
+  color: var(--blue);
+  font-weight: 600;
+  font-size: clamp(0.8rem, 1.3rem, 1.7rem)
 }
