--- a/Front/src/pages/Register/Register.module.scss
+++ b/Front/src/pages/Register/Register.module.scss
@@ -6,23 +6,14 @@
         width: 40%;
     }
 
-    .feedbackGood {
-        color: var(--text-color);
-        text-align: center;
-        margin-block: 25px;
-        font-size: 1.2rem;
-        font-weight: 500;
-        background-color: var(--action);
-        border-radius: 10vh 0 10vh 0;
-        border: inset 2px var(--red);
-    }
+}
 
-    .feedback {
-        text-align: center;
-        color: var(--red);
-        font-weight: 600;
-        margin-top: 25px;
-        font-size: 1.5rem;
-    }
+.newReset {
+    margin-block: 5%;
+    font-size: clamp(1.2rem, 1.3rem, 2rem);
+    ;
 
+    p {
+        margin: 1% 0 2% 0
+    }
 }
