--- a/Front/src/pages/Security/ForgotPassword.module.scss
+++ b/Front/src/pages/Security/ForgotPassword.module.scss
@@ -1,8 +1,27 @@
+@use"../../assets/styles/mixin" as mixin;
+
 .forgotPassword {
     width: 33%;
     margin: 5% auto;
     display: flex;
     flex-direction: column;
+
+    @include mixin.md-lt {
+        width: 50%
+    }
+
+    @include mixin.sm-lt {
+        width: 65%
+    }
+
+    @include mixin.intxs {
+        width: 70%
+    }
+
+    @include mixin.intxxs {
+        width: 85%
+    }
+
 
     input {
         margin-bottom: 15px
