--- a/Front/src/App.module.scss
+++ b/Front/src/App.module.scss
@@ -1,3 +1,21 @@
-.appContainer{
-    min-height:100vh;
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    height: 12vh
+}
+
+Outlet {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-grow: 1;
+    min-height: 76vh;
+}
+
+footer {
+    height: 12vh
 }
