--- a/Front/src/components/Header/Account.module.scss
+++ b/Front/src/components/Header/Account.module.scss
@@ -87,7 +87,27 @@
             position: absolute;
             bottom: 8%;
             right: 7%;
+
+            @include mixin.sm-lt {
+                bottom: -5px;
+                right: -5px;
+                font-size: 1.2em;
+            }
+
+            @include mixin.intxs {
+                bottom: 0px;
+                right: 2px;
+                font-size: 1em;
+            }
+
+            @include mixin.intxs {
+                font-size: 0.8em;
+                right: 5px;
+                bottom: 2px;
+            }
         }
+
+
     }
 
     .image {
@@ -98,6 +118,16 @@
         border-radius: 50%;
         height: 4em;
         width: 4em;
+
+        @include mixin.sm-lt {
+            height: 3em;
+            width: 3em;
+        }
+
+        @include mixin.intxs {
+            height: 2.5em;
+            width: 2.5em;
+        }
 
     }
 
@@ -118,6 +148,12 @@
 
         transition: opacity ease 0.3s, transform ease 0.3s;
 
+        @include mixin.sm-lt {
+            bottom: -220%
+        }
+
+
+
 
 
         .li {
@@ -134,6 +170,14 @@
                 z-index: 0;
                 cursor: pointer;
                 margin-bottom: 5%;
+
+                @include mixin.sm-lt {
+                    font-size: 0.7rem;
+                }
+
+                @include mixin.sm-lt {
+                    font-size: 0.6rem;
+                }
 
                 &:before {
                     content: '';
