--- a/Front/src/pages/Discussion/Talk/Talk.module.scss
+++ b/Front/src/pages/Discussion/Talk/Talk.module.scss
@@ -1,7 +1,11 @@
 .formMessage {
+    flex-wrap: wrap;
+    justify-content: center;
+
     input {
         width: clamp(50%, 75%, 95%);
         min-width: 250px;
+        margin-bottom: 15px;
     }
 }
 
