--- a/Front/src/App.module.scss
+++ b/Front/src/App.module.scss
@@ -1,21 +1,12 @@
-body {
+.app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-}
 
-header {
-    height: 12vh
-}
-
-Outlet {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-grow: 1;
-    min-height: 76vh;
-}
-
-footer {
-    height: 12vh
+    .containerApp {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
