--- a/Front/src/assets/styles/_theme.scss
+++ b/Front/src/assets/styles/_theme.scss
@@ -78,7 +78,7 @@ label {
   color: var(--red);
   font-weight: 500;
   text-align: center;
-  font-size: clamp(1rem, 1.2rem, 1.5rem);
+  font-size: clamp(0.8rem, 1rem, 1.5rem);
 }
 
 // .feedbackGood {
@@ -134,7 +134,9 @@ label {
     text-align: center;
 
     @include mixin.intxs {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
+      width: 80%;
+      margin: 0 auto;
     }
   }
 
@@ -142,13 +144,34 @@ label {
     width: 90%;
     margin: 20px auto 0 auto;
 
+    @include mixin.intxs {
+      font-size: 1rem;
+    }
+
   }
 
   .inputAdmin {
     padding: 10px;
     width: 90%;
     margin: 0 auto;
+
+    @include mixin.intxs {
+      padding: 5px;
+      font-size: 1rem;
+    }
   }
+
+  @include mixin.intxs {
+    padding: 5px;
+    font-size: 1rem;
+  }
+
+  input[type=file]::file-selector-button {
+
+    padding: 5px;
+    font-size: 0.7rem;
+  }
+
 
   select {
     padding: 5px;
