--- a/Front/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/Front/src/components/Header/BurgerMenu/Burger.module.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     color: var(--red);
     border-radius: 5vh;
-    backdrop-filter: blur(5px);
+    // backdrop-filter: blur(2px);
     align-items: center;
     padding-top: 0.2%;
     height: 4.8em;
