--- a/Front/src/components/utils/Line.module.scss
+++ b/Front/src/components/utils/Line.module.scss
@@ -1,8 +1,16 @@
+@use"../../assets/styles/mixin" as mixin;
+
 .line {
     height: 3px;
     width: 30%;
     margin: 1.5em auto;
     background: linear-gradient(to left, #F3EADB, #1AA89E 25%, #1AA89E 75%, #F3EADB);
+
+    @include mixin.intxs {
+
+        width: 50%;
+        height: 2px;
+    }
 }
 
 .lineReverse {
