--- a/Front/src/pages/Security/ForgotPassword.module.scss
+++ b/Front/src/pages/Security/ForgotPassword.module.scss
@@ -1,10 +1,11 @@
 @use"../../assets/styles/mixin" as mixin;
 
 .forgotPassword {
-    width: 50%;
-    margin: 5% auto;
+    width: 35%;
+    margin: 5% 0;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 
     @include mixin.md-lt {
         width: 50%
