--- a/Front/src/pages/Accueil/components/Card.module.scss
+++ b/Front/src/pages/Accueil/components/Card.module.scss
@@ -75,6 +75,7 @@
 
             @include mixin.intxs {
                 width: 75%;
+                margin: 0 auto;
 
             }
 
@@ -120,7 +121,7 @@
         @include mixin.sm-lt {
             width: 60%;
             font-size: 1rem;
-            margin: 2% auto;
+            margin: 0 auto;
 
         }
 
@@ -128,7 +129,6 @@
             width: 60%;
             font-size: 0.8rem;
             text-align: left;
-            margin: 5% auto;
         }
 
         @include mixin.intxs {
