--- a/Front/src/pages/Ludotheque/components/CardGame.module.scss
+++ b/Front/src/pages/Ludotheque/components/CardGame.module.scss
@@ -14,6 +14,7 @@
             color: var(--red);
             font-size: 2rem;
             transition: ease-in-out .5s;
+            cursor: pointer;
 
             &:hover {
                 transform: scale(1.2);
