--- a/Front/src/components/utils/Line.module.scss
+++ b/Front/src/components/utils/Line.module.scss
@@ -18,4 +18,9 @@
     width: 50%;
     margin: 1em auto 0 auto;
     background: linear-gradient(to left, #1AA89E, #F3EADB 40%, #F3EADB 60%, #1AA89E);
+
+    @include mixin.intxs {
+        height: 2px;
+    }
+
 }
